Переделал веб, поправил недочёты поправил немного warning'ов